Função de salvar e carregar perfis
Botões de salvar e carregar perfil funcionando. Com isso é possível salvar um perfil de equalização (pesos dos filtros) e recarregar posteriormente, útil para salvar uma configuração para um dipositivo de saída específico.

--- a/gui_dir/front.kv
+++ b/gui_dir/front.kv
@@ -1,6 +1,10 @@
 <Front>:
     MDBoxLayout:
         orientation: "vertical"
+        MDTopAppBar:
+            title: "Equapyzer"
+            pos_hint: {"top": 1}
+            left_action_items: [["arrow-up", lambda _: app.go_to_graph()]]
         MDGridLayout:
             padding: [50, 0, 50, 0]
             cols: 15
