--- a/gui_dir/main.kv
+++ b/gui_dir/main.kv
@@ -1,23 +1,14 @@
 MDScreenManager:
     Screen:
-        name: "main"
-        id: main
-        MDBackdrop:
-            id: main-backdrop
-            title: "Equapyzer"
-            radius_left:  "25dp"
-            radius_right: "25dp"
-            header_text: ""
-            MDBackdropFrontLayer:
-                Front:
-                    id: front
-            MDBackdropBackLayer:
-                Back:
-                    id: back
+        name: "gains"
+        id: gains-screen
+        Front:
+            id: gains
     Screen:
-        name: "create"
-        id: create
-        Create:
+        name: "graph"
+        id: graph-screen
+        Back:
+            id: graph
 
 
 
