--- a/gui_dir/back.kv
+++ b/gui_dir/back.kv
@@ -1,26 +1,9 @@
 <Back>:
     MDBoxLayout:
         orientation: "vertical"
-        MDTopAppBar:
-            title: "Equapyzer"
-            pos_hint: {"top": 1}
-            left_action_items: [["arrow-down", lambda _: app.go_to_main()]]
+        TopBar:
         MDBoxLayout:
             id: freq_resp
             size_hint: [.6, 2.5]
             pos_hint: {"center_y": .5, "center_x": .5}
-        MDFloatLayout:
-            MDFillRoundFlatIconButton:
-                icon: "content-save"
-                text: "Save Profile"
-                md_bg_color: "#212121"
-                pos_hint: {"center_y": .65, "center_x": .42}
-                size_hint: [.13, .4]
-                on_release: app.save_profile()
-            MDFillRoundFlatIconButton:
-                icon: "folder-open"
-                text: "Load Profile"
-                md_bg_color: "#212121"
-                pos_hint: {"center_y": .65, "center_x": .58}
-                size_hint: [.13, .4]
-                on_release: app.load_profile()
+        BackButtons:
