--- a/gui_dir/back.kv
+++ b/gui_dir/back.kv
@@ -1,9 +1,10 @@
 <Back>:
-    MDBoxLayout:
+    MDFloatLayout:
         orientation: "vertical"
         TopBar:
         MDBoxLayout:
             id: freq_resp
-            size_hint: [.6, 2.5]
-            pos_hint: {"center_y": .5, "center_x": .5}
+            size_hint: [.6, .6]
+            pos_hint: {"center_y": .6, "center_x": .5}
         BackButtons:
+            id: back_buttons
