--- a/gui_dir/simple_widgets.kv
+++ b/gui_dir/simple_widgets.kv
@@ -9,17 +9,32 @@
         icon: "content-save"
         text: "Save Profile"
         md_bg_color: "#212121"
-        pos_hint: {"center_y": .65, "center_x": .42}
-        size_hint: [.13, .4]
+        pos_hint: {"center_y": .23, "center_x": .38}
+        size_hint: [.2, .03]
         on_release: app.save_profile()
     MDFillRoundFlatIconButton:
         icon: "folder-open"
         text: "Load Profile"
         md_bg_color: "#212121"
-        pos_hint: {"center_y": .65, "center_x": .58}
-        size_hint: [.13, .4]
+        pos_hint: {"center_y": .23, "center_x": .62}
+        size_hint: [.2, .03]
         on_release: app.load_profile()
-
+    MDFillRoundFlatIconButton:
+        icon: "microphone"
+        id: in_menu
+        md_bg_color: "#212121"
+        pos_hint: {"center_y": .15, "center_x": .5}
+        text: "Input device"
+        size_hint: [.44, .03]
+        on_release: app.in_menu.open()
+    MDFillRoundFlatIconButton:
+        icon: "speaker"
+        id: out_menu
+        md_bg_color: "#212121"
+        pos_hint: {"center_y": .07, "center_x": .5}
+        text: "Output device"
+        size_hint: [.44, .03]
+        on_release: app.out_menu.open()
 
 <GainSlider>:
     on_active: app.update_filter()
